concord_macros/tests/dsl/fail/fail_unknown_behavior_parent.rs
use concord_macros::api;

api! {
    client UnknownBehaviorParentApi {
        base "https://example.com"

        behavior child extends missing {
            retry off
        }
    }
}

fn main() {}
